stop images from spilling

--- a/css/default.css
+++ b/css/default.css
@@ -15,6 +15,10 @@ a {
     color: inherit;
 }
 
+img {
+    max-width: 100%;
+}
+
 body > * {
     padding-left: 15px;
     padding-right: 15px;
